--- a/index.html
+++ b/index.html
@@ -1,42 +1,84 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@700;800&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- Fontlar -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@600;700;800&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Mobil uyum -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kariyer-rotasi</title>
-    <meta name="title" content="Kariyer Rotası – Kalite, Mühendislik, Yapay Zekâ">
-    <meta name="description" content="Kalite yönetimi, kariyer, yapay zekâ ve verimlilik üzerine sade, pratik rehberler.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Kariyer Rotası">
-    <meta property="og:description" content="Kalite yönetimi, kariyer, yapay zekâ ve verimlilik üzerine sade, pratik rehberler.">
-    <meta property="og:image" content="/og-cover.png"> <!-- varsa -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <script defer data-domain="kariyerrotasi.com" data-spa="auto" src="https://plausible.io/js/plausible.js"></script>
 
+    <!-- Başlık -->
+    <title>
+      Kariyer Rotası – Mühendisler ve kalite profesyonelleri için kariyer & kalite rehberleri
+    </title>
 
+    <!-- Açıklama -->
+    <meta
+      name="description"
+      content="Kariyer Rotası, mühendisler ve kalite profesyonelleri için kalite yönetimi, kariyer gelişimi, yapay zeka ve verimlilik üzerine sade ve pratik rehberler sunar."
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="Kariyer Rotası" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Kariyer Rotası – Mühendisler ve kalite profesyonelleri için kariyer & kalite rehberleri"
+    />
+    <meta
+      property="og:description"
+      content="Kalite yönetimi, kariyer, yapay zekâ ve verimlilik üzerine sade, uygulanabilir rehberler ve indirilebilir şablonlar."
+    />
+    <!-- Varsa küçültülmüş kapak görseli ekleyebilirsin -->
+    <meta property="og:image" content="/og-cover.png" />
+    <meta property="og:url" content="https://kariyerrotasi.com" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Kariyer Rotası – Mühendisler ve kalite profesyonelleri için rehber platform"
+    />
+    <meta
+      name="twitter:description"
+      content="Kalite yönetimi, kariyer, yapay zekâ ve verimlilik konusunda sade rehberler ve şablonlar."
+    />
+    <meta name="twitter:image" content="/og-cover.png" />
+
+    <!-- Analytics (Plausible) -->
+    <script
+      defer
+      data-domain="kariyerrotasi.com"
+      data-spa="auto"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script>
-  // Header'a scroll gölgesi
-  (function(){
-    const h = document.querySelector('.header');
-    const onScroll = () => {
-      if(!h) return;
-      if(window.scrollY > 6) h.classList.add('scrolled');
-      else h.classList.remove('scrolled');
-    };
-    onScroll(); window.addEventListener('scroll', onScroll, {passive:true});
-  })();
-</script>
 
+    <!-- Header scroll shadow -->
+    <script>
+      (function () {
+        const h = document.querySelector(".header");
+        const onScroll = () => {
+          if (!h) return;
+          if (window.scrollY > 6) h.classList.add("scrolled");
+          else h.classList.remove("scrolled");
+        };
+        onScroll();
+        window.addEventListener("scroll", onScroll, { passive: true });
+      })();
+    </script>
   </body>
 </html>
